# Qweather

./: .gitignore  AddCityButton.qml  AirQualityCard.qml  AirQualityPage.qml  AirQualityStore.cpp  AirQualityStore.h  ApiUsagePage.qml  AppSettings.cpp  AppSettings.h  AstroSolarPage.qml  AstronomyModel.cpp  AstronomyModel.h  AtmosphereLayer.qml  BackgroundManager.cpp  BackgroundManager.h  CMakeLists.txt  CityCard.qml  CityDetailPage.qml  CityDetailStore.cpp  CityDetailStore.h  CityStore.qml  CloudLayer.qml  DashboardPage.qml  FavoritesPage.qml  FogLayer.qml  ForecastCard.qml  ForecastPage.qml  ForecastStore.cpp  ForecastStore.h  GlobalClock.cpp  GlobalClock.h  InfoChip.qml  LightningLayer.qml  Main.qml  NavButton.qml  README.md  RainLayer.qml  SearchBar.qml  SettingsPage.qml  SidePanel.qml  (+30 more)
.reasonix/: desktop-topic-auto-title-meta.json  desktop-topic-created-at.json  desktop-topic-title-sources.json  desktop-topic-titles.json
.reasonix/attachments/: clipboard-20260716-141343.533056-000002.docx
.reasonix/autoresearch/20260716-111706-qt-qt-brotato-qt-dlc-c-python-flask-qt-http-5-qt-2/logs/: heartbeat.jsonl
.reasonix/autoresearch/20260716-111706-qt-qt-brotato-qt-dlc-c-python-flask-qt-http-5-qt-2/state/: directions_tried.json  findings.jsonl  progress.json  task_spec.json
docs/: QWeather-实现原理详解.md  QWeather-项目演示PPT.pptx  个人总结与自我鉴定.md  项目软件需求规格说明书.md
docs/video-prep/: 00-材料索引.md  01-视频脚本大纲.md  02-代码走读要点清单.md  03-演示操作清单.md
shaders/: atmosphere.frag  cloud.frag  fog.frag  lightning.frag  rain.frag  sky.frag  snow.frag
shaders/common/: color.glsl  lighting.glsl  math.glsl  noise.glsl  particle.glsl  random.glsl  tonemap.glsl
(+5 files in other folders)
